--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document Baru</title>
 </head>
 <body>
-<p>INI fitur yang ada di branch baru</p>    
+<p>INI fitur yang ada di branch baru</p>
+
+<p>ini bakal bikin conflict</p>
 </body>
 </html>
